--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,6 @@ PUSHER_APP_SECRET=
 PUSHER_APP_ID=
 PUSHER_APP_CLUSTER=mt1
 ABLY_KEY=
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # cache
 CACHE_DRIVER=file
@@ -70,17 +68,6 @@ ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
 # elastic migrations
 ELASTIC_MIGRATIONS_TABLE=elastic_migrations
 
-# enlightn
-ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=false
-ENLIGHTN_USERNAME=
-ENLIGHTN_API_TOKEN=
-ENLIGHTN_GITHUB_REPO=
-
-# feature flags
-ALLOW_VIDEO_STREAMS=false
-ALLOW_DISCORD_NOTIFICATIONS=false
-ALLOW_VIEW_RECORDING=false
-
 # filesystems
 FILESYSTEM_DISK=local
 
@@ -103,6 +90,15 @@ VIDEO_STREAM_READS=
 VIDEO_DISABLE_ASSERTS=
 VIDEO_VISIBILITY=
 
+# flags
+ALLOW_VIDEO_STREAMS=false
+ALLOW_DISCORD_NOTIFICATIONS=false
+ALLOW_VIEW_RECORDING=false
+
+# fortify
+FORTIFY_PATH=
+FORTIFY_URL=http://localhost
+
 # hashing
 BCRYPT_ROUNDS=10
 
@@ -111,7 +107,8 @@ HORIZON_DOMAIN=
 HORIZON_PATH=horizon
 
 # jetstream
-TEAM_CREATOR_ID=
+JETSTREAM_PATH=
+JETSTREAM_URL=http://localhost
 
 # logging
 LOG_CHANNEL=daily
@@ -127,7 +124,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
-MAIL_SENDMAIL_PATH=/usr/sbin/sendmail
+MAIL_SENDMAIL_PATH="/usr/sbin/sendmail -bs -i"
 MAIL_LOG_CHANNEL=
 
 # nova
@@ -176,11 +173,6 @@ SESSION_STORE=null
 SESSION_DOMAIN=null
 SESSION_SECURE_COOKIE=
 
-# teams
-HORIZON_TEAM_ID=
-NOVA_TEAM_ID=
-TELESCOPE_TEAM_ID=
-
 # telescope
 TELESCOPE_DOMAIN=null
 TELESCOPE_PATH=telescope
@@ -191,6 +183,12 @@ TELESCOPE_ENABLED=true
 VIDEO_PATH=/video
 VIDEO_URL=
 
+# web
+WEB_URL=http://localhost
+WEB_PATH=
+
 # wiki
 WIKI_FEATURED_ENTRY=
 WIKI_FEATURED_VIDEO=
+WIKI_DONATE_URL=#
+WIKI_FAQ_URL=#
