--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,15 @@ PUSHER_APP_SECRET=
 PUSHER_APP_ID=
 PUSHER_HOST=
 PUSHER_APP_CLUSTER=mt1
-PUSHER_PORT=
-PUSHER_SCHEME=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
 ABLY_KEY=
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # cache
 CACHE_DRIVER=file
