--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "alpinejs": "^3.10.2",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.27.2",
-        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^0.2.4",
         "lodash": "^4.17.21",
-        "tailwindcss": "^3.1.4"
+        "postcss": "8.4.14",
+        "tailwindcss": "^3.1.4",
+        "vite": "^2.9.13"
     }
 }
