--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ APP_URL=http://localhost
 ASSET_URL=null
 APP_KEY=
 
+# audio
+AUDIO_PATH=/audio
+AUDIO_URL=
+
 # audit
 AUDITING_ENABLED=true
 
@@ -99,8 +103,18 @@ VIDEO_STREAM_READS=
 VIDEO_DISABLE_ASSERTS=
 VIDEO_VISIBILITY=
 
+AUDIO_ACCESS_KEY_ID=
+AUDIO_SECRET_ACCESS_KEY=
+AUDIO_DEFAULT_REGION=
+AUDIO_ENDPOINT=
+AUDIO_BUCKET=
+AUDIO_STREAM_READS=
+AUDIO_DISABLE_ASSERTS=
+AUDIO_VISIBILITY=
+
 # flags
 ALLOW_VIDEO_STREAMS=false
+ALLOW_AUDIO_STREAMS=false
 ALLOW_DISCORD_NOTIFICATIONS=false
 ALLOW_VIEW_RECORDING=false
 
