--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
+        "akaunting/laravel-setting": "^1.2",
         "babenkoivan/elastic-migrations": "^3.0",
         "babenkoivan/elastic-scout-driver-plus": "^4.0",
         "bensampo/laravel-enum": "^6.0",
