--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,12 @@ ASSET_URL=null
 APP_KEY=
 
 # audio
-AUDIO_DISK_DEFAULT=audios_nyc
-AUDIO_DISKS=audios_nyc
+AUDIO_DISK_DEFAULT=audios_local
+AUDIO_DISKS=audios_local
 AUDIO_DISK_ROOT=
 AUDIO_PATH=/audio
 AUDIO_URL=
-AUDIO_STREAMING_METHOD=
+AUDIO_STREAMING_METHOD=response
 AUDIO_NGINX_REDIRECT=
 
 # broadcasting
@@ -178,7 +178,7 @@ HORIZON_DOMAIN=
 HORIZON_PATH=horizon
 
 # image
-IMAGE_DISK=images
+IMAGE_DISK=images_local
 IMAGE_DISK_ROOT=
 
 # jetstream
@@ -258,19 +258,18 @@ TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
 
 # video
-VIDEO_DISK_DEFAULT=videos_nyc
-VIDEO_DISKS=videos_nyc
+VIDEO_DISK_DEFAULT=videos_local
+VIDEO_DISKS=videos_local
 VIDEO_DISK_ROOT=
 VIDEO_PATH=/video
 VIDEO_URL=
-VIDEO_STREAMING_METHOD=
+VIDEO_STREAMING_METHOD=response
 VIDEO_NGINX_REDIRECT=
 VIDEO_ENCODER_VERSION=
-VIDEO_UPLOAD_DISKS=
 
-SCRIPT_DISK=scripts
+SCRIPT_DISK=scripts_local
 SCRIPT_DISK_ROOT=
-SCRIPT_URL=http://localhost
+SCRIPT_URL=
 SCRIPT_PATH=/videoscript
 
 # web
