--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^5.5",
         "staudenmeir/belongs-to-through": "^2.12",
+        "staudenmeir/laravel-adjacency-list": "^1.12",
         "symfony/http-client": "^6.0",
         "symfony/mailgun-mailer": "^6.0"
     },
