--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /public/hot
 /public/storage
 /public/build
+/public/audios
+/public/images
+/public/videos
+/public/dumps
+/public/scripts
 /storage/*.key
 /vendor
 .env
