--- a/composer.json
+++ b/composer.json
@@ -29,26 +29,26 @@
         "ext-intl": "*",
         "ext-pdo": "*",
         "akaunting/laravel-setting": "^1.2",
-        "babenkoivan/elastic-migrations": "^3.0",
-        "babenkoivan/elastic-scout-driver-plus": "^4.0",
-        "bensampo/laravel-enum": "^6.0",
-        "bepsvpt/secure-headers": "^7.2",
+        "babenkoivan/elastic-migrations": "^3.3",
+        "babenkoivan/elastic-scout-driver-plus": "^4.3",
+        "bensampo/laravel-enum": "^6.3",
+        "bepsvpt/secure-headers": "^7.4",
         "cyrildewit/eloquent-viewable": "^6.1",
         "fakerphp/faker": "^1.21",
         "guzzlehttp/guzzle": "^7.5",
-        "laravel-notification-channels/discord": "^1.3",
-        "laravel/fortify": "^1.13",
+        "laravel-notification-channels/discord": "^1.4",
+        "laravel/fortify": "^1.16",
         "laravel/framework": "^9.45",
-        "laravel/horizon": "^5.8",
-        "laravel/nova": "^4.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/scout": "^9.4",
-        "laravel/telescope": "^4.7",
-        "laravel/tinker": "^2.7",
+        "laravel/horizon": "^5.12",
+        "laravel/nova": "^4.22.2",
+        "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.0",
+        "laravel/telescope": "^4.12",
+        "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "pbmedia/laravel-ffmpeg": "^8.2",
+        "pbmedia/laravel-ffmpeg": "^8.3",
         "spatie/db-dumper": "^3.1.1",
-        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-permission": "^5.8",
         "staudenmeir/belongs-to-through": "^2.12",
         "staudenmeir/laravel-adjacency-list": "^1.12",
         "symfony/http-client": "^6.0",
@@ -56,10 +56,10 @@
     },
     "require-dev": {
         "brianium/paratest": "^6.7",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.6",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^6.1",
-        "nunomaduro/larastan": "^2.0",
+        "nunomaduro/larastan": "^2.4",
         "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^2.0",
         "spatie/laravel-ignition": "^1.6"
@@ -71,7 +71,10 @@
             "ext-posix": "8.2"
         },
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
@@ -90,7 +93,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
