--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
         "pbmedia/laravel-ffmpeg": "^8.3",
+        "propaganistas/laravel-disposable-email": "^2.2",
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^5.8",
         "staudenmeir/belongs-to-through": "^2.12",
