feat: adding hashids support

--- a/.env.example
+++ b/.env.example
@@ -171,6 +171,10 @@ FORTIFY_HOME=http://localhost
 FORTIFY_PATH=
 FORTIFY_URL=http://localhost
 
+# hashids
+HASHIDS_SALT_MAIN=
+HASHIDS_SALT_PLAYLISTS=
+
 # hashing
 BCRYPT_ROUNDS=10
 
